# SReXperts

./: .gitignore  .markdownlint.yml  LICENSE  Makefile  README.md  mkdocs.yml  requirements.txt
Hackathon/: README.md
clab/: Makefile  README.md  comment-startup.py  srx.clab.backup.yml  srx.clab.drawio  srx.clab.yml
diagrams/: 18-custom-traffic-scapy.drawio
docs/: htmltest.yml  index.md
eda/: .envrc  README.md  ansible.cfg  cleanup-playground-fabric.sh  cleanup-pools.sh  eda-catalog.yml  galaxy-requirements.yml  inventory.yml  karim-catalog.yml  pyproject.toml  record-init-tx.sh  restore-eda.sh
eda/fabric/: 10_ip-pools.yaml  12_asnpool.yml  15_evipool.yaml  16_vnipool.yaml  20_edge-interfaces.yaml  30_policy-accept-all.yaml  35_policy-underlay-export.yaml  40_fabric.yaml  50_bgp-pe-group.yaml  60_default-interfaces.yaml  70_bgp-pe-peers.yaml  80_vnet.yaml  90_bridge-domain.yaml  91_vlan.yaml  92_irb-grt.yaml  96-dns-clients.yaml  97-grpc-server.yaml  98-llm-provider.yaml
eda/playbooks/: users.yaml
eda/topo-onboard/: restore-srl.sh
eda/topo-onboard/clab/: containerlab-integration-crs.yml
eda/topo-onboard/cx/: README.md  cx-integration-crs.yml  network-topo.yaml
hackathon/: README.md
ix-rpki-lab/: README.md  hosts.yml  rpki-topology.clab.yml  setup_peering_bgpq4.yml  srl-rpki-agent.yml  topology.clab.yml
macros/: eda_icons.html  macros.html  main.py
scripts/: convert_to_webp.py
srl-ansible-lab/: README.md
srl-generic-lab/: .gitignore  README.md
srl-sros-gnmi-config-lab/: README.md
srl-telemetry-lab/: .gitignore  README.md  gnmic-config.yml  (+1 more)
(+693 files in other folders)
